--- a/src/main/webapp/resources/css/discussion/discussionChat.css
+++ b/src/main/webapp/resources/css/discussion/discussionChat.css
@@ -57,7 +57,6 @@
   	display:none;
 }
 .rowGroup .chatBox .chatArea .chat {
-	display : flex;
 	margin-bottom : 10px;
 	width : 85%;
 }
@@ -66,6 +65,7 @@
 }
 .rowGroup .chatBox .chatArea .chat .profile .box {
 	margin-top : 4px;
+	margin-bottom : 6px;
 }
 .rowGroup .chatBox .chatArea .chat .profile span {
 	line-height : 22px;
@@ -79,11 +79,13 @@
     border-radius: 6px;
 }
 .rowGroup .chatBox .chatArea .chat .text {
-	margin-left : 7px;
 	padding: 7px;
     border-radius: 9px;
     background-color: #dddddd;
     font-size : 15px;
+    display: inline-block;
+    max-width: 90%;
+    margin-top: 4px;
 }
 .rowGroup .chatBox .chatArea .myChat {
 	text-align : right;
