--- a/src/main/webapp/resources/css/home/home.css
+++ b/src/main/webapp/resources/css/home/home.css
@@ -396,13 +396,14 @@
 	display : inline-block;
 	background-color: #ff3c00;
     color: white;
-    width: 24px;
-    height: 24px;
+    width: 21px;
+    height: 21px;
     text-align: center;
-    line-height: 24px;
-    border-radius: 31px;
+    line-height: 20px;
+    border-radius: 20px;
     cursor : pointer;
     margin-top: 3px;
+    font-size : 14px;
 }
 .comunityBox .loginRequired {
     text-align: center;
