--- a/src/main/webapp/resources/css/member/memberDelete.css
+++ b/src/main/webapp/resources/css/member/memberDelete.css
@@ -8,7 +8,7 @@ body {
 	border-top : 1px solid rgb(241 241 241);
 }
 .rightSide {
-	padding : 20px;
+	padding: 20px 30% 20px 20px;
 }
 .rightSide .header {
 	display : flex;
@@ -20,6 +20,7 @@ body {
 .rightSide .header .section {
 	flex : 1;
 	display : flex;	
+	position : relative;
 }
 .rightSide .header .section .text {
 	margin-left : 10px;
@@ -32,32 +33,6 @@ body {
 .rightSide .header .section .text a {
 	text-decoration: none;
 	color : #727272;
-}
-.rightSide .header .myInfo {
-	display : flex;
-}
-.rightSide .header .myInfo .col {
-	margin-left : 14px;
-	cursor : pointer;
-}
-.rightSide .header .myInfo .col1 img {
-	background-color: #7db4f5;
-	width : 25px;
-	height : 25px;
-	border-radius: 13px;
-}
-.rightSide .header .myInfo .col2 {
-	margin-left : 3px;
-}
-.rightSide .header .myInfo .col2:hover .text1 {
-	text-decoration: underline;
-}
-.rightSide .header .myInfo .col2 .text1 {
-	line-height : 23px;
-}
-.rightSide .header .myInfo .col2 .text2 {
-	font-size : 10px;
-	color : gray;
 }
 .rightSide .submenu1 {
 	border-radius: 10px;
@@ -159,4 +134,13 @@ body {
 	width : 100%;
 	box-sizing: border-box;
 	border-radius: 3px;
+}
+
+
+
+
+
+.userInfo {
+    top: -14px !important;
+    right: -9px !important;
 }
