--- a/src/main/webapp/resources/css/board/boardContent.css
+++ b/src/main/webapp/resources/css/board/boardContent.css
@@ -88,6 +88,7 @@
     background-color: white;
     border-radius: 4px;
     display : none;
+    z-index : 2;
 }
 .contentContainer .option .optionForm div {
 	text-align : center;
