--- a/src/main/webapp/resources/css/home/userInfo.css
+++ b/src/main/webapp/resources/css/home/userInfo.css
@@ -44,6 +44,7 @@
     text-align: center;
     box-shadow: 0px 0px 7px 0px rgba(0,0,0,.12);
     display : none;
+    background-color : white;
 }
 .userInfo .box .settingForm .item {
 	padding : 6px 0px;
@@ -56,7 +57,7 @@
 
 
 
-.userInfo .box .chatAlarmTotal {
+.userInfo .box .alarmTotal {
 	position : absolute;
 	background-color : #ff3c00;
 	color : white;
@@ -64,7 +65,11 @@
     top: 3px;
     border-radius: 40px;
     font-size: 12px;
-    padding: 4px;
+    width: 20px;
+    height: 20px;
+    text-align: center;
+    line-height: 19px;
+    display : none;
 }
 .userInfo .chattingForm .arrow {
 	border-left : 3px solid #677ef1;
@@ -108,6 +113,10 @@
 }
 .chattingForm .friendList {
 	overflow: auto;
+	height: 300px;
+}
+.chattingForm .friendList::-webkit-scrollbar {
+	display : none;
 }
 .chattingForm .friendList .friend {
 	display : flex;
@@ -165,13 +174,14 @@
 	display : inline-block;
 	background-color: #ff3c00;
     color: white;
-    width: 24px;
-    height: 24px;
+    width: 21px;
+    height: 21px;
     text-align: center;
-    line-height: 24px;
-    border-radius: 31px;
+    line-height: 20px;
+    border-radius: 20px;
     cursor : pointer;
     margin-top: 3px;
+    font-size : 14px;
 }
 .chattingForm .loginRequired {
     text-align: center;
@@ -229,4 +239,69 @@
     border-radius: 7px;
     max-width : 80%;
     margin-top: 7px;
+}
+
+
+
+.alarmForm {
+	position: absolute;
+    border: 1px solid #e9e9e9;
+    border-radius: 6px;
+    top: 54px;
+    right: -251px;
+    text-align: left;
+    box-shadow: 0px 0px 7px 0px rgba(0,0,0,.12);
+    display: none;
+    background-color: white;
+    min-width : 300px;
+    box-sizing: border-box;
+    z-index : 5;
+}
+#alarmTotal {
+	right : 2px;
+}
+.alarmForm #alarmLoadLayer {
+	max-height: 250px;
+    overflow: auto;
+}
+.alarmForm #alarmLoadLayer::-webkit-scrollbar {
+	display : none;
+}
+.userInfo .alarmForm .arrow {
+	left : 20px;
+}
+.userInfo .alarmForm .alarm {
+	position : relative;
+	padding: 12px 28px 12px 8px;
+	border-bottom : 1px solid #e7e7e7;
+	font-size : 13px;
+}
+.userInfo .alarmForm .alarm.noRead .alarmText {
+	font-weight: bolder;
+	font-size : 14px;
+}
+.userInfo .alarmForm .alarm .imgBox {
+	position : absolute;
+	right : 6px;
+	top : 9px;
+	width : 22px;
+	height : 22px;
+	background-color : #ff408e;
+	border-radius: 20px;
+	cursor : pointer;
+}
+.userInfo .alarmForm .alarm .imgBox img {
+	position : absolute;
+	right : 3px;
+	top : 3px;
+	width : 16px;
+	border-radius: 20px;
+}
+.userInfo .alarmForm .alarm:nth-last-of-type(1) {
+	border : none;	
+}
+.userInfo .alarmForm .alarm .timeDiff {
+	font-size : 12px;
+	margin-top : 2px;
+	color : gray;
 }
