--- a/src/main/webapp/resources/css/member/myPage2.css
+++ b/src/main/webapp/resources/css/member/myPage2.css
@@ -60,61 +60,40 @@ body {
 	font-size : 10px;
 	color : gray;
 }
-
-
-
-.rightSide .keywordContainer {
+.rightSide .submenu1 {
+	border-radius: 10px;
+	box-shadow: 1px 1px 16px 0 rgba(0,0,0,.16);
+	box-sizing: border-box;
 	width : 93%;
-	margin : 35px auto;
-}
-.keywordContainer .title {
-	font-size : 22px;
-	font-weight : bolder;
-}
-.keywordContainer .keywordBox {
-	border : 1px solid darkgrey;
-	border-radius: 6px;
+	margin : 30px auto;
 	padding : 20px;
-	margin-top : 10px;
+	font-size : 16px;
+}
+.rightSide .submenu1 > .line {
+	margin-top : 12px;
+	margin-bottom : 12px;
+}
+.rightSide .submenu1 img {
+	vertical-align: middle;
+}
+.rightSide .submenu1 .row {
 	display : flex;
-	flex-wrap: wrap;
+	justify-content: space-between;
 }
-.keywordBox .keyword {
-	border-radius: 6px;
-	padding : 8px 12px 8px 14px;
-	height : 33.7px;
-	box-sizing : border-box;
-	color : white;
-	margin : 0px 10px 10px 0px;
+.rightSide .submenu1 .row .text1 {
+	vertical-align: middle;
 }
-.keywordBox .addKeyword img {
-	width : 26px;
-	margin-top : 3px;
+.rightSide .submenu1 .row .col2 .btn {
+	width : 28px;
+	height : 20px;
+	background-color : #eeecec;
+	font-size : 14px;
+	padding : 2px 10px 1px 10px;
+	border : 1px solid lightgray;
+	border-radius: 3px;
+	color: #777676;
 	cursor : pointer;
 }
-.keywordBox .keyword .delete {
-	cursor : pointer;
-	font-weight : bolder;
-}
-.keywordBox .keyword.input {
-	padding: 3px 10px;
-	display : none;
-}
-.keywordBox .keyword.input input {
-    margin-top: 4px;
-    outline : none;
-    width : 85px;
-}
-.keywordBox .saveKeyword {
-	display : none;
-}
-.keywordBox .saveKeyword img{
-	width : 26px;
-	margin-top : 3px;
-	cursor : pointer;
-}
-
-
 
 
 
