--- a/src/main/webapp/resources/css/home/header.css
+++ b/src/main/webapp/resources/css/home/header.css
@@ -14,6 +14,7 @@ body {
 .headerContainer .logo {
 	margin-bottom : 15px;
 	margin-top : 15px;
+	user-select : none;
 }
 .headerContainer .logo img {
 	width : 200px;
