--- a/src/main/webapp/resources/css/home/home.css
+++ b/src/main/webapp/resources/css/home/home.css
@@ -161,6 +161,17 @@
 	font-size: 13px;
 	color : gray;
 }
+.loginBox .row4 .box {
+	border-radius: 25px;
+	width : 50px;
+	height : 50px;
+	margin-left : 7px;
+	user-select : none;
+}
+
+
+
+
 
 
 
@@ -237,9 +248,6 @@
 	display : flex;
 	justify-content: space-between;
 }
-.memberBox .row4 span {
-	cursor : pointer;
-}
 .memberBox .row4 #adminPage {
     color: #009688;
     font-weight: bolder;
@@ -275,6 +283,105 @@
 	line-height: 40px;
 	cursor : pointer;
 }
+.memberBox .row4 .box {
+	border-radius: 25px;
+	position : relative;
+	width : 50px;
+}
+.memberBox .row4 .box .arrow {
+	width : 12px;
+	height : 12px;
+	border-left : 1px solid #e9e9e9;
+	border-top : 1px solid #e9e9e9;
+	transform : rotate(45deg);
+	position : absolute;
+	background-color: white;
+    top: -7px;
+    right: 14px;
+    border-radius: 1px;
+}
+.memberBox .row4 span.text1 {
+	cursor : pointer;
+}
+.memberBox .row4 .box .alarmForm {
+	position: absolute;
+    border: 1px solid #e9e9e9;
+    border-radius: 6px;
+    top: 23px;
+    right: -245px;
+    text-align: left;
+    box-shadow: 0px 0px 7px 0px rgba(0,0,0,.12);
+    display: none;
+    background-color: white;
+    min-width : 310px;
+    box-sizing: border-box;
+    z-index : 5;
+    color : #191919;
+}
+.memberBox .row4 .box > span {
+	user-select : none;
+	cursor : pointer;
+}
+.memberBox #alarmTotal {
+	color : #ffa600;
+	right : 2px;
+	font-weight : bolder;
+}
+.memberBox .alarmForm #alarmLoadLayer {
+	max-height: 250px;
+    overflow: auto;
+}
+.memberBox .alarmForm #alarmLoadLayer::-webkit-scrollbar {
+	display : none;
+}
+.memberBox .alarmForm .arrow {
+	left : 20px;
+}
+.memberBox .alarmForm .alarm {
+	position : relative;
+	padding: 12px 28px 12px 8px;
+	border-bottom : 1px solid #e7e7e7;
+	font-size : 13px;
+}
+.memberBox .alarmForm .alarm .alarmText {
+	user-select : none;
+	cursor : pointer;
+}
+.memberBox .alarmForm .alarm.noRead .alarmText {
+	font-weight: bolder;
+	font-size : 14px;
+}
+.memberBox .alarmForm .alarm .imgBox {
+	position : absolute;
+	right : 6px;
+	top : 9px;
+	width : 22px;
+	height : 22px;
+	background-color : #ff408e;
+	border-radius: 20px;
+	cursor : pointer;
+}
+.memberBox .alarmForm .alarm .imgBox img {
+	position : absolute;
+	right : 3px;
+	top : 3px;
+	width : 16px;
+	border-radius: 20px;
+}
+.memberBox .alarmForm .alarm:nth-last-of-type(1) {
+	border : none;	
+}
+.memberBox .alarmForm .alarm .timeDiff {
+	font-size : 12px;
+	margin-top : 2px;
+	color : gray;
+}
+
+
+
+
+
+
 
 
 
