--- a/src/main/webapp/resources/css/home/footer.css
+++ b/src/main/webapp/resources/css/home/footer.css
@@ -2,3 +2,8 @@
 	height : 200px;
 	background-color: rgb(239 239 239);
 }
+.footerContainer .text {
+	text-align : center;
+	padding-top : 80px;
+	color : gray;
+}
